2024년6월CKA Yaml/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: ingress-nginx
spec:
  containers:
  - image: nginx
    name: nginx
