2024년6월CKA Yaml/resolver.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resolver
spec:
  containers:
  - image: nginx
    name: resolver
