2024년6월CKA Yaml/sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  name: eshop-cart-app
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - 'i=1; while :;do  echo -e ": Price: 5703" >> /var/log/cart-app.log; i=1; sleep
      2; done'
    image: busybox
    name: cart-app
    volumeMounts:
    - mountPath: /var/log
      name: varlog
  - name: price
    image: busybox
    args: [/bin/sh, -c, 'tail -n+1 -f /var/log/cart-app.log']
    volumeMounts:
    - name: varlog
      mountPath: /var/log  
  volumes:
  - emptyDir: {}
    name: varlog
