2024년6월CKA Yaml/eshop-order.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop-order-svc
  namespace: devops
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: order
  type: ClusterIP
status:
  loadBalancer: {}
