2024년6월CKA Yaml/ingress-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-nginx
  name: appjs
spec:
  replicas: 3
  selector:
    matchLabels:
      name: appjs
  template:
    metadata:
      labels:
        name: appjs
    spec:
      containers:
      - image: smlinux/appjs
        name: appjs
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx
  name: appjs-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: appjs
